@@ -35,7 +35,6 @@ import sn.modelsis.signart.exception.SignArtException;
 import sn.modelsis.signart.facade.ImageMiniatureFacade;
 import sn.modelsis.signart.facade.OeuvreNumeriqueFacade;
 import static sn.modelsis.signart.service.ImageNumeriqueREST.encodeToString;
-import sun.misc.BASE64Encoder;
 
 
 /**
@@ -46,7 +45,10 @@ import sun.misc.BASE64Encoder;
 @Stateless
 @Path("imageMiniature")
 public class ImageMiniatureREST {
-    
+
+    //public final static String PATH = "C:\\Users\\snmbengueo\\Documents\\SignartRepSave\\abonnement\\";
+    public final static String PATH = "/signartFiles/abonnement/";
+
     @Inject
     ImageMiniatureFacade imageMiniaturefacade;
     
@@ -71,7 +73,7 @@ public class ImageMiniatureREST {
         for(int i=0; i<oeuvre.size(); i++){
             ImageMiniature image = new ImageMiniature();
             String nom = oeuvre.get(i).getNom();
-            BufferedImage minImage = ImageIO.read(new File("/opt/images/min_"+nom+".jpg"));
+            BufferedImage minImage = ImageIO.read(new File(PATH+"images\\min_"+nom+".jpg"));
             byte[] minImageByte = toByteArray(minImage, "jpg");           
             image.setNomImage(nom);         
             image.setValeurImage(minImageByte);
@@ -87,7 +89,7 @@ public class ImageMiniatureREST {
         
         //OeuvreNumerique oeuvre = oeuvreNumeriqueFacade.findByName(nameImage);
         ImageMiniature image = new ImageMiniature();
-            BufferedImage minImage = ImageIO.read(new File("C:\\Users\\snfayemp\\Documents\\Projet\\Stockage\\images\\min_"+nameImage+".jpg"));
+            BufferedImage minImage = ImageIO.read(new File(PATH + "images\\min_"+nameImage+".jpg"));
             byte[] minImageByte = toByteArray(minImage, "jpg");           
             image.setNomImage(nameImage);         
             image.setValeurImage(minImageByte);
@@ -153,8 +155,7 @@ public class ImageMiniatureREST {
         dto.setId(entity.getId());
         dto.setNomImage(entity.getNomImage());
          byte[] imageBytes = entity.getValeurImage();
-         BASE64Encoder encoder = new BASE64Encoder();
-         String imageString = encoder.encode(imageBytes);
+         String imageString = java.util.Base64.getEncoder().encodeToString(imageBytes);
         dto.setValeurImage(imageString);
         return dto;
     }
